# 2024-02-23_Task07_HW01_Graphics

./: CMakeLists.txt  graphic.cpp  graphic.h  graphic.ui  mainwindow.cpp  mainwindow.h
